# metis

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  DECISIONS.md  ENGINEERING.md  LICENSE  Makefile  QA.md  README.md  SECURITY.md  SPEC.md  backfill_external_roles.py  conftest.py  job_alert_pipeline.py  package-lock.json  package.json  proactive_sample.py  profile.template.yaml  pyproject.toml  requirements.txt  run_persona_test.py  setup_cron.sh  types.ts
.githooks/: pre-commit
.github/workflows/: test.yml
docs/: testing.md
emails/: JobAlertDigest.tsx
emails/components/: CardFooter.tsx  DigestHeader.tsx  JobCard.tsx  PointRow.tsx  SkippedGrid.tsx  Tag.tsx  TierSection.tsx
examples/: README.md  isolated_sources_smoke.sh  mcp_status_smoke.py  profile_product_designer.yaml  profile_software_engineer.yaml  track_dry_run_capped.sh
examples/personas/: profile_pm_diana.yaml  profile_pm_jake.yaml  profile_pm_marcus.yaml  profile_pm_priya.yaml  profile_pm_sarah.yaml
metis/: DESIGN.md  application_profile.py  application_state.py  apply_cmd.py  cli.py  config.py  config_access_cmd.py  config_apply_cmd.py  contracts.py  deliver.py  domain_taxonomy.py  domain_taxonomy.yaml  email_sources_cmd.py  extract.py  feedback.py  init_bak_cmd.py  init_cmd.py  mcp_server.py  normalization.py  pipeline.py  profile.py  profile_evidence.py  prompt_utils.py  prompts.py  provider_eval.py  render.py  report_cmd.py  resume_cmd.py  schedule_cmd.py  score.py  sources_cmd.py  state.py  tailor.py  theme.py  trace.py  track.py  track_imap.py  track_parse.py  track_write.py  types.py  (+1 more)
metis/auth/: gmail_oauth.py  oauth_security.py  outlook_oauth.py  state.py
metis/email_templates/: render.ts  tsconfig.json  types.ts
metis/email_templates/emails/: JobAlertDigest.tsx
metis/llm/: __init__.py
metis/services/: __init__.py  progress.py  read.py  write.py
metis/sources/: __init__.py  companies.yml  email_alerts.py  email_fetcher.py  linkedin.py  proactive.py
scorerole/: DESIGN.md  careerops.py  deliver.py  extract.py  feedback.py  feedback_cmd.py  init2_cmd.py  init_cmd.py  pipeline.py  profile.py  prompts.py  render.py  report_cmd.py  schedule_cmd.py  score.py  sources_cmd.py  state.py  theme.py  trace.py  track.py  track_write.py  tracker.py  types.py  xlsx.py
scorerole/sources/: __init__.py  companies.yml  linkedin.py  proactive.py
scripts/: setup_demo.py  smoke_mcp_services.py
tests/: test_apply.py  test_cli.py  test_core.py  test_delivery_guarantees.py  test_domain_taxonomy.py  test_e2e_personas.py  test_email_alert_sources.py  test_extract.py  test_feedback_cmd.py  test_init2.py  test_integration_logging.py  test_llm_provider.py  test_normalization.py  test_oauth_email_fetcher.py  test_oauth_security.py  test_profile_evidence.py  test_prompt_utils.py  test_prompts.py  test_provider_eval.py  test_regression_jun19.py  test_render_format.py  test_resume_tailor.py  test_schedule.py  test_score_render_contract.py  test_services.py
utils/: colors.ts  format.ts  scoring.ts
(+6 files in other folders)
