[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "metis-job"
version = "0.2.0"
description = "AI-powered job alert digest — filters, scores, and delivers only what's worth your time"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "httpx",
    "beautifulsoup4",
    "python-dotenv",
    "dateparser",
    "python-docx",
    "pyyaml",
    "pdfplumber",
    "questionary>=2.0",
    "rich>=13.0",
    "openpyxl>=3.1",
    "requests",
    "InquirerPy>=0.3.4",
]

[project.scripts]
metis = "scorerole.pipeline:main"

[project.optional-dependencies]
browser = ["playwright>=1.40"]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["scorerole*"]
