[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "metis-job"
version = "0.2.0"
description = "AI-powered job alert digest — filters, scores, and delivers only what's worth your time"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "openai>=1.82",
    "httpx",
    "requests",
    "beautifulsoup4",
    "python-dotenv",
    "dateparser",
    "python-docx",
    "pyyaml",
    "pdfplumber",
    "questionary>=2.0",
    "rich>=13.0",
    "InquirerPy>=0.3.4",
    "openpyxl>=3.1",
]

[project.scripts]
metis = "metis.cli:main"

[project.optional-dependencies]
browser = ["playwright>=1.40"]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["metis*"]

[tool.setuptools.package-data]
metis = [
    "sources/companies.yml",
    "email_templates/render.ts",
    "email_templates/package.json",
    "email_templates/tsconfig.json",
    "email_templates/types.ts",
    "email_templates/utils/*.ts",
    "email_templates/emails/**/*.tsx",
]
